[package]
name = "Asteroid_Game"
version = "0.9.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
lazy_static = "1.5.0"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
futures = "0.3"
once_cell = "1.21.3"

macroquad = "0.4" # Render Engine
pollster = "0.4.0" # Texture
rdev = "0.5.3" # Input
fs = "0.0.5" # Input settings

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
