[package]
name = "Asteroid_Game"
version = "0.9.2"
edition = "2024"

[dependencies]
mac-der = { path = "./mac-der" }
ast-lib = { path = "./ast-lib" }
ast-core = { path = "./ast-core" }
lazy_static = "1.5.0"

rand = { version = "0.8", features = ["small_rng"] }

macroquad = "0.4" # Render Engine
fs = "0.0.5" # Input settings

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
